syntax = "proto3";

package accountManager;

service UsersService {
  rpc CreateUser(CreateUserRequest) returns (Reply) {};
  rpc ListUsers(EmptyRequest) returns (ArrayReply) {};
}

message User {
  uint64 id = 1;
  string name = 2;
}

message CreateUserRequest {
  string name = 1;
}

message CreateUserReplyErrorData {
  string contact = 1;
}
